dark mode corrected

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,14 +4,14 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 84, 62, 107;
+  --background-start-rgb: 70, 62, 107;
   --background-end-rgb: 76, 0, 153;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 84, 62, 107;
+    --background-start-rgb: 70, 62, 107;
     --background-end-rgb: 76, 0, 153;
   }
 }
